--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Lean
-middle_name: 
+first_name: Dr.
+middle_name: Lean
 last_name: Luo
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
