updated personal info, added new announcements, etc.

--- a/_config.yml
+++ b/_config.yml
@@ -261,7 +261,7 @@ display_categories: ["external-services"] # these categories will be displayed o
 
 scholar:
   last_name: [Luo]
-  first_name: [Lean]
+  first_name: [L.]
 
   style: apa
   locale: en
